# kitsune_ai

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  build.gradle  e_r_r_o_r.txt  jacamoRL.jcm  main.py  pyproject.toml
assets/: fox.png~
models/: a.py  mario_qlearning_epoch_0.pkl  mario_qlearning_epoch_1.pkl
models/sarsa/: learne_mario.sar
src/: config.py  environment.py  game_env.py  kitsune.py  kitsune_agent.py  kitsune_env.py  kitsune_view.py  main.py  utils.py  view.py
src/agt/: kitsune_agent.asl  kitsune_agent_mario.asl  kitsune_agent_mario.asl_  kitsune_agent_mario.asl_1
src/agt/rl/algorithm/: BehaviourSerializer.java  Sarsa.java
src/agt/rl/algorithm/tf/: PyAlgorithm.java  QLearning.java  TensorFlowAgent.java
src/agt/rl/beliefbase/: BeliefBaseRL.java
src/agt/rl/component/: Action.java  Observation.java
src/env/: KitsuneEnv.java
src/env/rest/: EnvironmentRest.java  RestClient.java  StateRest.java
src/games/: super_mario_bros_env.py
src/genetic/: natural_evolution.py  utils.py
src/jason-RL/: build.gradle  jacamoRL2.jcm_
src/jason-RL/valuefunction/: learnedvf_gridworld.sar
src/rl/: dqn.py  qlearning.py  sarsa.py  utils.py
valuefunction/: learne_mario.sar  learne_mario_n.sar
